--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "symfony/yaml": "^4.1"
     },
     "require-dev": {
+        "friendsofphp/php-cs-fixer": "^2.12",
         "symfony/debug-pack": "*",
         "symfony/dotenv": "^4.1",
         "symfony/maker-bundle": "^1.0",
@@ -65,7 +66,8 @@
         ],
         "post-update-cmd": [
             "@auto-scripts"
-        ]
+        ],
+        "cs-fixer": "./vendor/bin/php-cs-fixer --allow-risky=yes fix"
     },
     "conflict": {
         "symfony/symfony": "*"
