--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -21,9 +21,9 @@ doctrine:
         naming_strategy: doctrine.orm.naming_strategy.underscore
         auto_mapping: true
         mappings:
-            App:
+            Account:
                 is_bundle: false
                 type: annotation
-                dir: '%kernel.project_dir%/src/Entity'
-                prefix: 'App\Entity'
-                alias: App
+                dir: '%kernel.project_dir%/src_domain/Account/Entity'
+                prefix: 'Polidog\LoginSample\Account\Entity'
+                alias: Account
