--- a/config/domain/account.yaml
+++ b/config/domain/account.yaml
@@ -15,3 +15,4 @@ services:
         exclude: '../../src_domain/Account/{Entity,Exception}'
 
     Polidog\LoginSample\Account\Repository\AccountRepositoryInterface: '@App\Repository\AccountRepository'
+    Polidog\LoginSample\Account\Service\PasswordEncoderInterface: '@App\Service\PasswordEncoder'
