--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -41,4 +41,5 @@ security:
     access_control:
         - { path: ^/login, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/logout, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/signup/*, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/.*, role: ROLE_USER }
