--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "symfony/yaml": "^4.1"
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.0",
         "friendsofphp/php-cs-fixer": "^2.12",
         "phpunit/phpunit": "^7.2",
         "symfony/debug-pack": "*",
