--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -14,6 +14,8 @@
         <env name="APP_DEBUG" value="1" />
         <env name="APP_SECRET" value="s$cretf0rt3st" />
         <env name="SHELL_VERBOSITY" value="-1" />
+        <env name="DATABASE_URL" value="mysql://root:@127.0.0.1/sf4_loing_sample_test" />
+
         <!-- define your env variables for the test env here -->
     </php>
 
