--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -21,16 +21,14 @@
     <testsuites>
         <testsuite name="Project Test Suite">
             <directory>tests</directory>
-        </testsuite>
-        <testsuite name="Domain Test Suite">
             <directory>tests_domain</directory>
         </testsuite>
-
     </testsuites>
 
     <filter>
         <whitelist>
             <directory>src</directory>
+            <directory>src_domain</directory>
         </whitelist>
     </filter>
 </phpunit>
