change phpunit config

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -28,6 +28,8 @@
     <filter>
         <whitelist>
             <directory>src</directory>
+            <exclude>src/DataFixtures/*</exclude>
+            <exclude>src/Migrations/*</exclude>
             <directory>src_domain</directory>
         </whitelist>
     </filter>
