--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -28,9 +28,12 @@
     <filter>
         <whitelist>
             <directory>src</directory>
-            <exclude>src/DataFixtures/*</exclude>
-            <exclude>src/Migrations/*</exclude>
             <directory>src_domain</directory>
+            <exclude>
+                <directory>src/DataFixtures</directory>
+                <directory>src/Migrations</directory>
+            </exclude>
         </whitelist>
+
     </filter>
 </phpunit>
